[package]
name = "kino-api"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]

[[bin]]
name = "kino"
doc = false

[dependencies]
nom = "0.5.0"
term = { path = "term" }
system = { path = "system" }
unroll = { path = "unroll" }
event = { path = "event" }
conf = { path = "conf" }
kind = { path = "kind" }
bmc = { path = "bmc" }
