[package]
name = "kino-api"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]

[[bin]]
name = "kino"
doc = false

[dependencies]
term = { path = "term" }
system = { path = "system" }
unroll = { path = "unroll" }
common = { path = "common" }
kind = { path = "kind" }
bmc = { path = "bmc" }
tig = { path = "tig" }
