[package]
name = "kino_api"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]

[[bin]]
name = "kino"
doc = false

[dependencies]
error-chain = "*"
term = { path = "term" }
system = { path = "system" }
unroll = { path = "unroll" }
common = { path = "common" }
bmc = { path = "bmc" }
kind = { path = "kind" }
twind = { path = "twind" }
tig = { path = "tig" }
pruner = { path = "pruner" }
