[package]
name = "system"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]

[[bin]]
name = "system-bin"
doc = false

[dependencies]
num = "*"
nom = "0.5.0"
hashconsing = { git = "https://bitbucket.org/AdrienChampion/hashconsing.git" }
rsmt2 = { git = "https://bitbucket.org/AdrienChampion/rsmt2.git" }
term = { path = "../term" }