[package]
name = "term"
version = "0.1.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]

[[bin]]
name = "term_bin"
doc = false

[dependencies]
num = "*"
nom = { version = "*", features = [ "regexp" ] }
hashconsing = { git = "https://bitbucket.org/AdrienChampion/hashconsing.git" }
rsmt2 = { git = "https://bitbucket.org/AdrienChampion/rsmt2.git" }